--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
       </div>
     </div>
     <div class="row">
-      <p>1975 года рождения. Живу в Новосибирске. Окончил экономический ВУЗ по специальности "экономист". Работаю ведущим программистом в крупной строительной компании. Разрабатываю системы онлайн синхронизации баз данных, а также корпоративные web-приложения и мобильные бизнес-приложения для удаленной работы специалистов на объектах.</p>
-      <p>Три года преподавал студентам техникума. Разрабатывал на 1С систему складского учета и сайт для мелкооптового поставщика, 3000+ позиций, онлайн обмен между филиалами и розничными точками. Последние годы разрабатывал корпоративную ERP-систему в части учета оперативной деятельности (несколько баз данных, филиалы, 300+ пользователей, онлайн обмен).</p>
-      <p>Разрабатывал сайты на php (<a href="http://www.optusb.ru" target="blank">пример 1</a>, <a href="http://www.zsnso15.ru" target="blank">пример 2</a>). Прошел <a href="https://goodprogrammer.ru/users/15981" target="blank">интенсив</a> по Ruby on Rails от <a href="https://goodprogrammer.ru" target="blank">"Хорошего программиста"</a> с мая по сентябрь 2020 года (пять месяцев ежедневных занятий по Ruby on Rails). Теперь хочу полностью уйти в профессиональную вэб-разработку.</p>
+      <p>Родился в 1975 году. Живу в Новосибирске. Учился в университете по специальности "экономист". Три года преподавал студентам техникума автоматизацию бухучета. Разрабатывал на 1С систему складского учета и сайт для мелкооптового поставщика, 3000+ позиций, онлайн обмен между филиалами и розничными точками.</p><p>Последние годы разрабатывал корпоративную ERP-систему в части учета оперативной деятельности (несколько баз данных, филиалы, 300+ пользователей, онлайн обмен), а также корпоративные web-приложения и мобильные бизнес-приложения для удаленной работы специалистов на объектах.</p>
+      <p>Разрабатывал сайты на php (<a href="http://www.optusb.ru" target="blank">пример 1</a>, <a href="https://inna-nsk.ru/" target="blank">пример 2</a>). Прошел <a href="https://goodprogrammer.ru/users/15981" target="blank">интенсив</a> по Ruby on Rails от <a href="https://goodprogrammer.ru" target="blank">"Хорошего программиста"</a> с мая по сентябрь 2020 года (пять месяцев ежедневных занятий по Ruby on Rails). В процессе обучения сделал несколько сайтов (<a href="http://meet-meat.ru" target="blank">пример</a>).</p>
 
       <h4>Чем занимаюсь:</h4>
       <ul>
@@ -37,25 +36,25 @@
         <li>Разработка системы онлайн документирования ПО (php).</li>
         <li>Работа с датчиками оборудования и сторонним ПО через web api.</li>
         <li>Разработка ботов с обратной связью напрямую в базу 1С для оперативного контроля.</li>
+        <li>Разработка системы парсинга сайта <a href="https://zakupki.gov.ru" target="blank">Госзакупок</a> (ruby + sinatra + nokgiri).</li>
         <li>Курирование разработки системы распознавания лиц в компании (2 программиста + python).</li>
-        <li>Разработка системы парсинга сайта <a href="https://zakupki.gov.ru" target="blank">Госзакупок</a> (ruby + nokgiri).</li>
         <li>Написание документации к ПО.</li>
       </ul>
 
       <h4>Навыки:</h4>
       <ul>
-        <li><b>SQL:</b> PostgreSQL, Sqlite, MySQL.</li>
-        <li><b>Front-end:</b> HTML5, CSS3, Javascript, JQuery, Bootstrap, UIKit, Slim</li>
         <li><b>Back-end:</b> Ruby, Ruby on Rails, RSpec, REST, php</li>
+        <li><b>Front-end:</b> HTML5, CSS3, Javascript, JQuery, Bootstrap, UIKit, Slim</li>
+        <li><b>DB:</b> PostgreSQL, Sqlite, MySQL.</li>
         <li><b>Git:</b> GitHub, BitBucket</li>
-        <li>Linux, VPS</li>
+        <li>Linux</li>
       </ul>
 
       <h4>Еще обо мне:</h4>
-      <p>Люблю изучать новые технологии. Предпочитаю погружаться глубоко в одину тему, нежели быстро переключаться между разными задачами (<a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%BB%D0%BE%D1%83%D0%BF%D0%BE%D0%BA" target="blank">ヤドン</a>).</p>
-      <p>Коммуникабельный, умею мотивировать и погашать конфликты. Специалисты по <a href="https://ru.wikipedia.org/wiki/%D0%90%D1%81%D1%81%D0%B5%D1%81%D1%81%D0%BC%D0%B5%D0%BD%D1%82-%D1%86%D0%B5%D0%BD%D1%82%D1%80" target="blank">ассесменту</a> полагают, что у меня очень хорошие <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B8%D0%B5_%D0%BD%D0%B0%D0%B2%D1%8B%D0%BA%D0%B8" target="blank">soft skills</a>.</p>
+      <p>Люблю изучать новые технологии.</p>
+      <p>Коммуникабельный, умею мотивировать и погашать конфликты. Специалисты по <a href="https://ru.wikipedia.org/wiki/%D0%90%D1%81%D1%81%D0%B5%D1%81%D1%81%D0%BC%D0%B5%D0%BD%D1%82-%D1%86%D0%B5%D0%BD%D1%82%D1%80" target="blank">ассесменту</a> полагают, что у меня очень хорошие <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%B1%D0%BA%D0%B8%D0%B5_%D0%BD%D0%B0%D0%B2%D1%8B%D0%BA%D0%B8" target="blank">софт скилы</a>.</p>
       <p>Быстро и грамотно пишу по-русски, а также быстро, но не очень грамотно – по-английски. На английском читаю техническую документацию.</p>
-      <p>В свободное время изучаю <a href="https://en.wikipedia.org/wiki/Natural-language_understanding" target="blank">NLU</a> и английский (pre-intermediate).</p>
+      <p>В свободное время читаю, изучаю <a href="https://flutter.dev/" target="blank">Flutter</a> и слушаю подкасты.</p>
 
     </div>
   </div>
